--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html lang="en">
 <head>
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
-<title>C0mbii C0nmpleta</title>
+<title>Horax Connpletax</title>
 <meta content='Atendemos asii' property='og:description'/>
-<meta content="https://imgur.com/xbD0vbD.png" property="og:image">
+<meta content="https://imgur.com/P0QpHEe.png" property="og:image">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
